--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="utf-8" />
+<link rel="icon" type="image/png" href="/src/Img/202298.png" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>PDF Ex Tractor</title>
   <!-- Font Awesome for icons -->
