--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <title>PDF Ex Tractor</title>
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  
+  <!-- Google AdSense Script -->
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2275948678152815"
+     crossorigin="anonymous"></script>
 <style>
 * {
   margin: 0;
