--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
 <meta charset="utf-8" />
 <link rel="icon" type="image/png" href="/src/Img/202298.png" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>PDF Ex Tractor</title>
+<title>PDF Ex Tractor - Extracción Automática de Datos de Facturas</title>
+<meta name="description" content="Automatiza la extracción de datos desde facturas PDF con IA. Ahorra tiempo y elimina errores. Gratis hasta 5 PDFs por mes.">
+<meta name="keywords" content="facturas, PDF, extracción de datos, OCR, contabilidad, automatización">
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   
-  <!-- Google AdSense Script -->
- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2275948678152815"
-     crossorigin="anonymous"></script>
+  <!-- PropellerAds Script - REEMPLAZAR CON TU CÓDIGO REAL DESPUÉS DE REGISTRARTE -->
+  <!-- Pasos:
+       1. Regístrate en https://propellerads.com
+       2. Agrega tu sitio pdf-ex-tractor.vercel.app
+       3. Crea 4 "zones" (ad units):
+          - 3 para sidebar izquierda (horizontal/responsive)
+          - 1 para sidebar derecha (vertical/responsive)
+       4. Copia el código de PropellerAds aquí
+       5. Actualiza los zone IDs en AdBanner.jsx
+  -->
 <style>
 * {
   margin: 0;
